--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@
 name: CI Pipeline
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
 
 env:
   DOCKER_IMAGE: robertobreuer/notificaciones
